--- a/css/styles.css
+++ b/css/styles.css
@@ -7,193 +7,232 @@
 }
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    list-style: none;
     text-decoration: none;
-    box-sizing: border-box;
+    list-style: none;
     font-size: 24px;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
+
+/* Fonts CSS */
+.ubuntu-regular {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ubuntu-medium {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.ubuntu-bold {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 
 body {
+    font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
+    line-height: 1.6;
     display: inline-block;
-}
-
-/* Header Container */
-header {
+    width: 100%;
     background-color: var(--primary);
-    place-content: center;
-    place-items: center;
 }
 
-.navbar {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    padding: 1em 10%;
-}
-
-.navbar .navbar-nav ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.navbar .navbar-nav ul a {
-    cursor: pointer;
-    color: var(--text);
-}
-
-.navbar .navbar-nav ul a:hover {
-    color: var(--text);
-    padding: 0.3em;
-    border-radius: 1rem;
-    background-color: var(--p2);
-}
-
-.navbar img {
-    width: 20%;
-    height: auto;
-}
-
-/* Body Container */
 .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    place-content: center;
-    place-items: center;
-    height: 80vh;
-    background: linear-gradient(0deg, rgb(185, 180, 180) 10%, rgba(255, 255, 255, 0) 40%);
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.container .content {
+/* Header Function */
+header {
+    background-color: var(--p2);
+    color: var(--text);
+    padding: 1rem 0;
+    place-content: center;
+    place-items: center;
+}
+
+header img {
+    width: 20%;
+    cursor: pointer;
+}
+
+header .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-content: center;
+    place-items: center;
+}
+
+header .container ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+header .container li a {
+    color: var(--text);
+    padding: 0.5rem;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+header .container li a:hover {
+    background-color: var(--p3);
+    border-radius: 1rem;
+}
+
+/* Section Hero Function */
+.hero {
     background-image: url('../image/bg.jpg');
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-    width: 50%;
-    min-height: 50vh;
-    place-items: center;
-    place-content: center;
-    margin: 2rem auto;
-    border-radius: 2rem;
-    line-height: 1.5rem;
+    height: 100vh;
+    margin-top: 2rem;
 }
 
-.container .content h1 {
-    color: var(--p4);
-    margin-bottom: 1rem;
+.hero .container {
     text-align: center;
-    font-size: 2rem;
 }
 
-.container .content p {
-    color: var(--p4);
+.hero .container h1 {
+    font-size: 1.5rem;
+}
+
+.hero .container p {
+    font-size: 1.1rem;
+    margin-bottom: 2rem;
+}
+
+.hero .container a {
+    color: var(--text);
+    background-color: var(--p3);
+    box-sizing: border-box;
+    padding: 1rem;
+    border-radius: 2rem;
+    cursor: pointer;
+}
+
+.hero .container a:hover {
+    background-color: var(--p4);
+}
+
+/* Section Services Function */
+.services {
+    background-color: var(--p3);
+    place-content: center;
+    place-items: center;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.services .container h2 {
     text-align: center;
     font-size: 1.5rem;
-    line-height: 2rem;
+    margin-bottom: 2rem;
 }
 
-/* Calculator Container */
-.container-calc {
-    background-color: var(--primary);
-    place-items: center;
-    margin-top: 5rem;
+.services .container .grid-container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1.5rem;
+    margin-bottom: 2rem;
 }
 
-.container-calc .calc-title h1 {
-    font-size: 2rem;
-    font-weight: bold;
-    margin: 2rem auto;
+.services .container .grid-item {
+    background-color: var(--p2);
+    padding: 1.2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.container-calc .calc-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-    place-content: center;
-    place-items: center;
-    margin-bottom: 5rem;
+.services h3, p {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
 }
 
-.calc-content h1 {
-    font-size: 1.2rem;
-    margin: 1rem auto;
+.services label {
+    display: block;
+    margin: 1rem 0 0.5rem;
 }
 
-.calc-content input {
+.services select, .services option,
+.services input[type="text"] {
     width: 60%;
-    padding: 0.5em;
-    border: 0.2rem solid var(--p3);
-    border-radius: 0.5rem;
-    transition: border-color 0.3s;
+    padding: 0.5rem;
+    border: 0.1rem solid var(--p4);
+    border-radius: 2rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     box-sizing: border-box;
+    text-align: center;
+    background-color: var(--p3);
+    cursor: pointer;
 }
 
-.calc-content button {
+.services select:hover, .services input[type="text"]:hover {
+    background-color: var(--p4);
+}
+
+.services .row {
+    margin-top: 2rem;
+}
+
+.services button {
     background-color: var(--p4);
     width: 30%;
     padding: 0.5em;
     box-sizing: border-box;
-    border: 0.2rem solid var(--p3);
+    border: 0.2rem solid var(--p2);
     cursor: pointer;
     border-radius: 0.5rem;
     transition: border-color 0.3s;
     box-sizing: border-box;
+    margin-bottom: 2rem;
 }
 
-.calc-content button:hover {
+.services button:active {
     background-color: var(--p2);
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
 
-.calc-content .content {
-    background-color: var(--p3);
-    width: 80%;
-    border-radius: 2rem;
-    box-sizing: border-box;
-    padding: 2em;
-}
-
-.calc-content .content .row {
-    margin-top: 2rem;
-}
-
-.calc-content .content h1 {
-    text-align: center;
-    font-size: 2rem;
-}
-
-.calc-content .content p {
-    font-size: 1.5rem;
-    line-height: 2rem;
-}
-
-/* Footer */
+/* Footer Function */
 footer {
-    background-color: var(--primary);
-    margin-top: 2rem;
+    background-color: var(--p3);
     place-content: center;
     place-items: center;
-    height: 20vh;
-}
-
-footer p {
-    font-size: 1.5rem;
+    text-align: center;
     margin-top: 2rem;
 }
 
 footer a {
-    cursor: pointer;
     color: var(--text);
+    cursor: pointer;
+    padding: 0.5rem;
+    border-radius: 2rem;
+    margin: 1rem auto;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
 footer a:hover {
-    color: var(--text);
-    padding: 0.3em;
-    border-radius: 1rem;
-    background-color: var(--p2);
+    background-color: var(--p4);
+}
+
+footer p {
+    font-size: 1rem;
+    margin-bottom: 2rem;
 }
 
 /* Media Queries */
@@ -202,40 +241,41 @@ footer a:hover {
     html {
         font-size: 80%;
     }
-    .navbar {
-        grid-template-columns: 1fr 1fr;
-    }
-    .navbar img {
+    header img {
         width: 50%;
     }
-    .navbar .navbar-nav ul {
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
+    .hero .container h1 {
+        font-size: 2rem;
     }
-    .container .content {
-        width: 90%;
-        line-height: 2.2rem;
+    .hero .container p {
+        font-size: 1.5rem;
     }
-    .container .content p {
-        font-size: 1.3rem;
-        line-height: 2rem;
-        font-weight: 400;
+    .hero .container a {
+        font-size: 1.5rem;
     }
-    .container-calc .calc-title {
-        margin: 2rem auto;
+    .services .container h2 {
+        font-size: 2rem;
     }
-    .container-calc .calc-content {
-        grid-template-columns: 1fr;
-        gap: 2rem;
+    .services .container h3 {
+        font-size: 1.7rem;
     }
-    .container-calc .calc-content input {
-        width: 100%;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
+    .services .container p {
+        font-size: 1.5rem;
     }
-    .container-calc .calc-content button {
-        width: 100%;
-        font-size: 1.2rem;
+    .services label {
+        font-size: 1.5rem;
+    }
+    .services select, .services option, .services input[type="text"] {
+        font-size: 1.4rem;
+    }
+    .services button {
+        font-size: 1.5rem;
+    }
+    footer a {
+        font-size: 1.5rem;
+    }
+    footer p {
+        font-size: 1.6rem;
     }
 }
 
@@ -244,40 +284,38 @@ footer a:hover {
     html {
         font-size: 80%;
     }
-    .navbar {
-        grid-template-columns: 1fr 1fr;
-    }
-    .navbar img {
+    header img {
         width: 50%;
     }
-    .navbar .navbar-nav ul {
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
+    .hero .container h1 {
+        font-size: 2rem;
     }
-    .container .content {
-        width: 90%;
-        line-height: 2.2rem;
+    .hero .container p {
+        font-size: 1.5rem;
     }
-    .container .content p {
-        font-size: 1.3rem;
-        line-height: 2rem;
-        font-weight: 400;
+    .hero .container a {
+        font-size: 1.5rem;
     }
-    .container-calc .calc-title {
-        margin: 2rem auto;
+    .services .container h2 {
+        font-size: 2rem;
     }
-    .container-calc .calc-content {
-        grid-template-columns: 1fr;
-        gap: 2rem;
+    .services .container h3 {
+        font-size: 1.7rem;
     }
-    .container-calc .calc-content input {
-        width: 100%;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
+    .services .container p {
+        font-size: 1.5rem;
     }
-    .container-calc .calc-content button {
-        width: 100%;
-        font-size: 1.2rem;
+    .services label {
+        font-size: 1.5rem;
+    }
+    .services select, .services option, .services input[type="text"] {
+        font-size: 1.4rem;
+    }
+    footer a {
+        font-size: 1.5rem;
+    }
+    footer p {
+        font-size: 1.6rem;
     }
 }
 
@@ -286,40 +324,38 @@ footer a:hover {
     html {
         font-size: 100%;
     }
-    .navbar {
-        grid-template-columns: 1fr 1fr;
+    header img {
+        width: 40%;
     }
-    .navbar img {
-        width: 50%;
+    .hero .container h1 {
+        font-size: 2rem;
     }
-    .navbar .navbar-nav ul {
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
+    .hero .container p {
+        font-size: 1.5rem;
     }
-    .container .content {
-        width: 90%;
-        line-height: 2.2rem;
+    .hero .container a {
+        font-size: 1.5rem;
     }
-    .container .content p {
-        font-size: 1.3rem;
-        line-height: 2rem;
-        font-weight: 400;
+    .services .container h2 {
+        font-size: 2rem;
     }
-    .container-calc .calc-title {
-        margin: 2rem auto;
+    .services .container h3 {
+        font-size: 1.7rem;
     }
-    .container-calc .calc-content {
-        grid-template-columns: 1fr;
-        gap: 2rem;
+    .services .container p {
+        font-size: 1.5rem;
     }
-    .container-calc .calc-content input {
-        width: 100%;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
+    .services label {
+        font-size: 1.5rem;
     }
-    .container-calc .calc-content button {
-        width: 100%;
-        font-size: 1.2rem;
+    .services select, .services option, .services input[type="text"] {
+        font-size: 1.4rem;
+    }
+    footer a {
+        font-size: 1.5rem;
+    }
+    footer p {
+        font-size: 1.6rem;
     }
 }
 
@@ -328,40 +364,43 @@ footer a:hover {
     html {
         font-size: 100%;
     }
-    .navbar {
-        grid-template-columns: 1fr 1fr;
+    header img {
+        width: 30%;
     }
-    .navbar img {
-        width: 50%;
+    .hero .container h1 {
+        font-size: 2rem;
     }
-    .navbar .navbar-nav ul {
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
+    .hero .container p {
+        font-size: 1.5rem;
     }
-    .container .content {
-        width: 90%;
-        line-height: 2.2rem;
+    .hero .container a {
+        font-size: 1.5rem;
     }
-    .container .content p {
-        font-size: 1.3rem;
-        line-height: 2rem;
-        font-weight: 400;
+    .services .container h2 {
+        font-size: 2rem;
     }
-    .container-calc .calc-title {
-        margin: 2rem auto;
+    .services .container h3 {
+        font-size: 1.7rem;
     }
-    .container-calc .calc-content {
-        grid-template-columns: 1fr;
-        gap: 2rem;
+    .services .container p {
+        font-size: 1.5rem;
     }
-    .container-calc .calc-content input {
+    .services label {
+        font-size: 1.5rem;
+    }
+    .services select, .services option, .services input, .services input[type="text"] {
+        font-size: 1.4rem;
         width: 100%;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
     }
-    .container-calc .calc-content button {
+    .services button {
+        font-size: 1.5rem;
         width: 100%;
-        font-size: 1.2rem;
+    }
+    footer a {
+        font-size: 1.5rem;
+    }
+    footer p {
+        font-size: 1.4rem;
     }
 }
 
@@ -370,14 +409,38 @@ footer a:hover {
     html {
         font-size: 100%;
     }
-    .container-calc .calc-content input {
-        width: 100%;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
+    header img {
+        width: 30%;
     }
-    .container-calc .calc-content button {
-        width: 100%;
-        font-size: 1.2rem;
+    .hero .container h1 {
+        font-size: 2rem;
+    }
+    .hero .container p {
+        font-size: 1.5rem;
+    }
+    .hero .container a {
+        font-size: 1.5rem;
+    }
+    .services .container h2 {
+        font-size: 2rem;
+    }
+    .services .container h3 {
+        font-size: 1.7rem;
+    }
+    .services .container p {
+        font-size: 1.5rem;
+    }
+    .services label {
+        font-size: 1.5rem;
+    }
+    .services select, .services option, .services input[type="text"] {
+        font-size: 1.4rem;
+    }
+    footer a {
+        font-size: 1.5rem;
+    }
+    footer p {
+        font-size: 1.6rem;
     }
 }
 
@@ -386,14 +449,38 @@ footer a:hover {
     html {
         font-size: 100%;
     }
-    .container-calc .calc-content input {
-        width: 100%;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
+    header img {
+        width: 20%;
     }
-    .container-calc .calc-content button {
-        width: 100%;
-        font-size: 1.2rem;
+    .hero .container h1 {
+        font-size: 2rem;
+    }
+    .hero .container p {
+        font-size: 1.5rem;
+    }
+    .hero .container a {
+        font-size: 1.5rem;
+    }
+    .services .container h2 {
+        font-size: 2rem;
+    }
+    .services .container h3 {
+        font-size: 1.7rem;
+    }
+    .services .container p {
+        font-size: 1.5rem;
+    }
+    .services label {
+        font-size: 1.5rem;
+    }
+    .services select, .services option, .services input[type="text"] {
+        font-size: 1.4rem;
+    }
+    footer a {
+        font-size: 1.5rem;
+    }
+    footer p {
+        font-size: 1.6rem;
     }
 }
 
